# cc-rig

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_docs/: cache-friendly-workflow.md  testing.md
assets/: demo-2-guided.tape  demo-4-showcase.tape
cc_rig/: __init__.py  __main__.py  clean.py  cli.py  doctor.py  validator.py
cc_rig/config/: __init__.py  cc_version.py  defaults.py  detection.py  manager.py  project.py  schema.py
cc_rig/data/: agents.json  commands.json
cc_rig/generators/: __init__.py  addons.py  agent_docs.py  agents.py  agents_md.py  claude_local.py  claude_md.py  commands.py  fileops.py  github_actions.py  harness.py  mcp.py  memory.py  misc.py  orchestrator.py  playbook.py  rules.py  settings.py  settings_local.py  skills.py
cc_rig/plugins/: __init__.py  registry.py
cc_rig/presets/: __init__.py  manager.py
cc_rig/presets/packs/: aihero.json  gstack.json  gtd.json  superpowers.json
cc_rig/presets/templates/: django.json  dotnet.json  echo.json  express.json  fastapi.json  flask.json  generic.json  gin.json  go_std.json  laravel.json  nextjs.json  phoenix.json  rails.json  rust_cli.json  rust_web.json  spring.json
cc_rig/presets/workflows/: aihero.json  gstack.json  gtd.json  gtd_lite.json  quick.json  rigorous.json  spec_driven.json  speedrun.json  standard.json  superpowers.json  verify_heavy.json
cc_rig/skills/: __init__.py  downloader.py  registry.py
cc_rig/templates/: __init__.py
cc_rig/templates/frameworks/: _go_web_base.py  (+16 more)
cc_rig/ui/: __init__.py  banner.py  descriptions.py  display.py  prompts.py  rich_prompts.py  rich_tui.py  textual_wizard.py  tui.py
cc_rig/wizard/: __init__.py  expert.py  flow.py  generate.py  harness.py  launcher.py  quick.py  stepper.py  steps.py
cc_rig/worktree/: __init__.py  manager.py  orchestrator.py  state.py
docs/: CLAUDE-CODE-SETUP.md  generated-output.md  mcp-setup.md  recommended-plugins.md  saving-tokens.md
specs/: e2e-test-matrix.md  skills-test-matrix.md
tests/: conftest.py
tests/integration/: test_e2e_matrix.py  test_generation.py  test_snapshots.py
tests/unit/: test_addons.py  test_agent_docs_gen.py  test_agents_gen.py  test_cc_version.py  test_claude_md.py  test_clean.py  test_cli_init.py  test_cli_skills.py  test_cli_worktree.py  test_command_frontmatter.py  test_commands_gen.py  test_compat.py  test_config.py  test_config_manager.py  test_config_update.py  test_data_files.py  test_defaults.py  test_detection.py  test_doctor.py  test_fileops.py  test_generate.py  test_github_actions.py  test_harness.py  test_mcp_gen.py  test_memory_content.py  test_new_features.py  test_output_hygiene.py  test_permission_modes.py  test_playbook_gen.py  test_plugin_registry.py  test_preset_community.py  test_presets.py  test_process_skills.py  test_prompts.py  test_rerun.py  test_rules.py  test_safe_clean.py  test_schema.py  test_settings.py  test_settings_local.py  (+14 more)
